gccida/c0/athlon_vectordec_unit_blockage
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_vectordec_unit_blockage/src/insn-attrtab.c:24023:39: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( executing_insn, "insn-attrtab.c", 23760, "athlon_vectordec_unit_blockage"); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_vectordec_unit_blockage/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_vectordec_unit_blockage/src/insn-attrtab.c:24023:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( executing_insn, "insn-attrtab.c", 23760, "athlon_vectordec_unit_blockage"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_vectordec_unit_blockage/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_vectordec_unit_blockage/src/insn-attrtab.c:24230:27: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
casenum = memory_operand( recog_data_0.operand[1], VOIDmode) == 0; 
                          ^~~~~~~~~~~~
                          recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_vectordec_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_vectordec_unit_blockage/src/insn-attrtab.c:24234:50: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
casenum = !which_alternative && !memory_operand( recog_data_0.operand[1], VOIDmode); 
                                                 ^~~~~~~~~~~~
                                                 recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_vectordec_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_vectordec_unit_blockage/src/insn-attrtab.c:24250:54: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
casenum = which_alternative == 1 && !memory_operand( recog_data_0.operand[1], VOIDmode); 
                                                     ^~~~~~~~~~~~
                                                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_vectordec_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_vectordec_unit_blockage/src/insn-attrtab.c:24334:39: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( candidate_insn, "insn-attrtab.c", 24162, "athlon_vectordec_unit_blockage"); 
                                      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_vectordec_unit_blockage/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_vectordec_unit_blockage/src/insn-attrtab.c:24334:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( candidate_insn, "insn-attrtab.c", 24162, "athlon_vectordec_unit_blockage"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_vectordec_unit_blockage/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_vectordec_unit_blockage/src/insn-attrtab.c:24541:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v6 = memory_operand( recog_data_0.operand[1], VOIDmode) != 0; 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_vectordec_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_vectordec_unit_blockage/src/insn-attrtab.c:24545:43: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v6 = which_alternative || memory_operand( recog_data_0.operand[1], VOIDmode); 
                                          ^~~~~~~~~~~~
                                          recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_vectordec_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_vectordec_unit_blockage/src/insn-attrtab.c:24561:48: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v6 = which_alternative != 1 || memory_operand( recog_data_0.operand[1], VOIDmode); 
                                               ^~~~~~~~~~~~
                                               recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_vectordec_unit_blockage/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/athlon_vectordec_unit_blockage/src/obj/insn-attrtab.o] Error 1
